- return roles for enumerate datasets API as well as snapshots - move roles to its own top level field - some refactoring around converting TDR model objects to openapi model objects